// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataSourceAggregatedView should render normally with local cluster and actice selections 1`] = `
<Fragment>
  <EuiButtonEmpty
    aria-label="dataSourceAggregatedViewMenuButton"
    className="euiHeaderLink"
    data-test-subj="dataSourceAggregatedViewContextMenuHeaderLink"
    disabled={true}
    iconSide="left"
    iconType="database"
    size="s"
  >
    Data sources
  </EuiButtonEmpty>
  <EuiNotificationBadge
    color="subdued"
  >
    1
  </EuiNotificationBadge>
  <EuiPopover
    anchorPosition="downLeft"
    button={
      <EuiButtonIcon
        aria-label="Next"
        display="empty"
        iconType="iInCircle"
        onClick={[Function]}
      />
    }
    closePopover={[Function]}
    display="inlineBlock"
    hasArrow={true}
    id="dataSourceSViewContextMenuPopover"
    isOpen={false}
    ownFocus={true}
    panelPaddingSize="none"
  >
    <EuiContextMenu
      initialPanelId={0}
      panels={
        Array [
          Object {
            "id": 0,
            "items": Array [
              Object {
                "disabled": true,
                "name": undefined,
              },
            ],
            "title": "Selected data sources",
          },
        ]
      }
      size="m"
    />
  </EuiPopover>
</Fragment>
`;

exports[`DataSourceAggregatedView should render normally with local cluster hidden and all options 1`] = `
<Fragment>
  <EuiButtonEmpty
    aria-label="dataSourceAggregatedViewMenuButton"
    className="euiHeaderLink"
    data-test-subj="dataSourceAggregatedViewContextMenuHeaderLink"
    disabled={true}
    iconSide="left"
    iconType="database"
    size="s"
  >
    Data sources
  </EuiButtonEmpty>
  <EuiNotificationBadge
    color="subdued"
  >
    All
  </EuiNotificationBadge>
  <EuiPopover
    anchorPosition="downLeft"
    button={
      <EuiButtonIcon
        aria-label="Next"
        display="empty"
        iconType="iInCircle"
        onClick={[Function]}
      />
    }
    closePopover={[Function]}
    display="inlineBlock"
    hasArrow={true}
    id="dataSourceSViewContextMenuPopover"
    isOpen={false}
    ownFocus={true}
    panelPaddingSize="none"
  >
    <EuiContextMenu
      initialPanelId={0}
      panels={
        Array [
          Object {
            "id": 0,
            "items": Array [],
            "title": "Data sources (0)",
          },
        ]
      }
      size="m"
    />
  </EuiPopover>
</Fragment>
`;

exports[`DataSourceAggregatedView should render normally with local cluster not hidden and all options 1`] = `
<Fragment>
  <EuiButtonEmpty
    aria-label="dataSourceAggregatedViewMenuButton"
    className="euiHeaderLink"
    data-test-subj="dataSourceAggregatedViewContextMenuHeaderLink"
    disabled={true}
    iconSide="left"
    iconType="database"
    size="s"
  >
    Data sources
  </EuiButtonEmpty>
  <EuiNotificationBadge
    color="subdued"
  >
    All
  </EuiNotificationBadge>
  <EuiPopover
    anchorPosition="downLeft"
    button={
      <EuiButtonIcon
        aria-label="Next"
        display="empty"
        iconType="iInCircle"
        onClick={[Function]}
      />
    }
    closePopover={[Function]}
    display="inlineBlock"
    hasArrow={true}
    id="dataSourceSViewContextMenuPopover"
    isOpen={false}
    ownFocus={true}
    panelPaddingSize="none"
  >
    <EuiContextMenu
      initialPanelId={0}
      panels={
        Array [
          Object {
            "id": 0,
            "items": Array [],
            "title": "Data sources (0)",
          },
        ]
      }
      size="m"
    />
  </EuiPopover>
</Fragment>
`;
